--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@heroicons/react": "^1.0.1",
     "react": "^17.0.2",
+    "react-copyright": "^0.0.1",
     "react-dom": "^17.0.2",
     "react-scripts": "^1.1.5"
   },
