--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@craco/craco": "^5.9.0",
     "@heroicons/react": "^1.0.1",
+    "fill-range": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^1.1.5"
+    "react-scripts": "^1.1.5",
+    "rimraf": "^3.0.2"
   },
   "scripts": {
     "start": "craco start",
