--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^1.1.5",
+    "reactstrap": "^8.10.0",
     "rimraf": "^3.0.2"
   },
   "scripts": {
